Metadata and entities compilation avoidance at runtime has been introduced